--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt-sass-resources-loader": "^2.0.5",
     "three": "^0.137.5",
     "vue": "^2.6.14",
+    "vue-lottie": "^0.2.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
